--- a/src/components/AddContactForm/AddContactForm.module.css
+++ b/src/components/AddContactForm/AddContactForm.module.css
@@ -1,10 +1,10 @@
 .gradientButton {
-  min-width: 162px;
+  max-width: 250px;
   text-decoration: none;
-  display: inline-block;
+
   color: white;
   padding: 10px 30px;
-  margin: 5px 10px;
+  margin: 10px 10px;
   border: 1px solid white;
   border-radius: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -24,4 +24,28 @@
 }
 .gradientButton:hover {
   background-position: right center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label {
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.input {
+  max-width: 250px;
+  min-width: 100px;
+  padding: 5px 5px;
+  margin: 5px 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 600;
 }
